<resources>

    <!--General strings-->
    <string name="app_name">Volteem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="news">News</string>
    <string name="settings">Settings</string>
    <string name="spinner_title">Gender</string>
    <string name="type">Type</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_volunteer_single_event">VolunteerSingleEventActivity</string>
    <string name="app_label">VolunteerApp</string>
    <string name="search_hint">Search events</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="about">About</string>
    <string name="delete_account">Delete Account</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="all_events">All Events</string>
    <string name="my_events">My Events</string>
    <string name="profile">Profile</string>
    <string name="chat">Interview</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="chatSingle">Interview</string>
    <string name="years">years</string>
    <string name="icon_from_age">icon from age</string>
    <string name="volteem_srl">Volteem SRL</string>
    <string name="volunteer">Volunteer</string>
    <string name="organiser">Organiser</string>
    <string name="events">Events</string>
    <string name="interview">Interview</string>
    <string name="logout_yes">Yes</string>
    <string name="logout_no">No</string>
    <string name="registration_title">Registration code</string>
    <string name="back">Back</string>
    <!--End of General strings-->

    <!-- Strings related to profile edit actions -->
    <string name="action_edit">Edit</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="change_password">Change Password</string>
    <string name="change_image">Change Image</string>
    <string name="view_image">View Image</string>
    <string name="past_events">Past Events</string>
    <!--End of Strings related to profile edit actions-->

    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="logging_in">Logging in</string>
    <string name="edittext_hint_email"></string>
    <string name="edittext_hint_password"></string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="log_in">LOG IN</string>
    <string name="password">Password</string>
    <!--End of Strings related to login-->

    <!-- Messages -->
    <string name="event_register_disclaimer">Joining an event is a commitment. If you leave this event later on, you will lose experience. Are you sure you want to register for this event?</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="logout_message_title">Are you sure?</string>
    <string name="no_internet">No internet connection</string>
    <string name="reset_pass_email_confirmation">Password email sent. Please check your inbox.</string>
    <string name="reset_pass_email_failed">Reset failed. Verify if the email is written correctly and try again.</string>
    <string name="form_validation_email">Please enter your email address.</string>
    <string name="form_validation_password">Please enter your password.</string>
    <string name="storage_permission_denied">Some app features may be disabled</string>
    <string name="field_empty">This field can not be empty.</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="no_stars">Please give us your feedback.</string>
    <string name="no_events">No events to show.</string>
    <string name="your_rank_loading">Rank: Loading…</string>
    <string name="your_rating">Rating: </string>
    <string name="no_feedback">This volunteer has no feedback.</string>
    <string name="select_questions">Please select which questions you want the volunteers to answer about themselves.</string>
    <string name="select_type">Please select a type.</string>
    <string name="deadline_after_finish_date">The deadline can not be after the finish date.</string>
    <string name="start_date_after_finish_date">The start date can not be after the finish date.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_message">Are you sure you want to leave this page? Your event will not be created and the changes made will be lost.</string>
    <string name="existing_email_address">Email address is already in use.</string>
    <string name="invalid_email_address">Please enter a valid email address.</string>
    <string name="invalid_password">Your password must be at least 6 characters long.</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="allow_storge_permission">Please allow storage permission</string>
    <string name="you_have_been_accepted">you have been accepted to</string>
    <string name="organiser_no_events">You don\'t have any events. How about creating one now?</string>
    <string name="set_permission">Set Permission</string>
    <string name="registration_code_message">To avoid spam, please submit an email to contact.volteem@gmail.com to receive your organiser registration code.</string>
    <string name="code_have">I have a code</string>
    <string name="change_saved">Changes saved!</string>
    <string name="storage_permission_needed">Please allow storage permission</string>
    <string name="invalid_registration_code">This code is invalid or has already been used.</string>
    <string name="old_version_message">You are using an outdated app version. Please update to the newest version.</string>
    <string name="no_past_events">You have no past events.</string>
    <string name="no_interviews">No interviews.</string>
    <string name="no_news">You have no news.</string>
    <string name="answer_questions">Answer questions</string>
    <string name="loading_questions">Loading questions…</string>
    <string name="next_question">NEXT QUESTION</string>
    <string name="all_questions_answered">You\'ve answered all available questions!</string>
    <string name="no_feedback_text">No feedback.</string>
    <string name="no_photo">You don\'t have a photo</string>
    <string name="old_version_title">Old version</string>
    <!--End of Messages-->

    <!--Strings related to creating and administrating events-->
    <string name="done">DONE</string>
    <string name="or">OR</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="start_event_date">Start event date</string>
    <string name="finish_event_date">Finish event date</string>
    <string name="description">Description</string>
    <string name="deadline">Deadline</string>
    <string name="volunteers_needed">Volunteers needed</string>
    <string name="upload_contract">Upload Contract</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="no_acc_volunteers">No accepted volunteers.</string>
    <string name="no_reg_volunteers">No new volunteers.</string>
    <string name="new_event">New event</string>
    <string name="event_created">Event created!</string>
    <string name="event_canceled">Event canceled.</string>
    <string name="events_add">Add</string>
    <string name="event_finished">Event finished</string>
    <string name="give_feedback">GIVE FEEDBACK</string>
    <string name="remove_volunteer">Remove volunteer</string>
    <string name="accept_volunteer">Accept Volunteer</string>
    <string name="start_interview">Start Interview</string>
    <string name="view_feedback">View Feedback</string>
    <string name="birthdate">Birthdate</string>

</resources>
