<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/item_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/volunteer_background"
        android:stateListAnimator="@animator/volunteer_selection">

        <TextView
            android:id="@+id/name_volunteer_element"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:maxWidth="200dp"
            android:text="Prenume Nume"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/exp_phone_volunteer_element"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/name_volunteer_element"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:text="500"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/expandable_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/exp_phone_volunteer_element"
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/volunteer_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="City: Cluj-Napoca"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/volunteer_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="Age: 25"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/volunteer_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="Phone number: 0777777777"
                android:textColor="@color/black"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/volunteer_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="Email: volunteer@app.com"
                android:textColor="@color/black"
                android:textIsSelectable="true" />

            <Button
                android:id="@+id/view_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:background="@android:color/transparent"
                android:text="@string/view_feedback"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/send_volunteer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:background="@android:color/transparent"
                android:text="@string/start_interview"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/accept_volunteer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:background="@android:color/transparent"
                android:text="@string/accept_volunteer"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/kick_volunteer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:background="@android:color/transparent"
                android:text="@string/remove_volunteer"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/expandable_item"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray" />

    </RelativeLayout>

</LinearLayout>