<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="25dp"
            app:cardCornerRadius="10dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ProfileVolunteerImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    app:civ_border_color="@color/colorAccent"
                    app:civ_border_overlay="true"
                    app:civ_border_width="2dp" />


                <TextView
                    android:id="@+id/ProfileVolunteerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ProfileVolunteerImage"
                    android:layout_centerHorizontal="true"
                    android:text=""
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ProfileVolunteerOrganization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ProfileVolunteerName"
                    android:layout_centerHorizontal="true"
                    android:text="@string/volteem_srl"
                    android:textSize="15sp" />


                <View
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/ProfileVolunteerOrganization"
                    android:layout_marginTop="30dp"
                    android:background="@color/lightGrey" />

                <View
                    android:id="@+id/line2"
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/line1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@color/lightGrey" />

                <ImageView
                    android:id="@+id/image_email_volunteer"
                    android:layout_width="21sp"
                    android:layout_height="21sp"
                    android:layout_below="@+id/line1"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_mail" />

                <TextView
                    android:id="@+id/ProfileVolunteerEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image_email_volunteer"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:ems="6"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="13sp" />


                <ImageView
                    android:id="@+id/image_phone_volunteer"
                    android:layout_width="21sp"
                    android:layout_height="21sp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/line1"
                    android:layout_marginEnd="50dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_phone" />

                <ImageView
                    android:id="@+id/icon_edit_city"
                    android:layout_width="17sp"
                    android:layout_height="17sp"
                    android:layout_alignBottom="@+id/image_city_volunteer"
                    android:layout_alignEnd="@+id/line4"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_edit"
                    android:visibility="invisible" />


                <EditText
                    android:id="@+id/ProfileVolunteerPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/image_phone_volunteer"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:ems="5"
                    android:inputType="phone"
                    android:maxLength="13"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    tools:ignore="LabelFor" />

                <ImageView
                    android:id="@+id/icon_edit_phone"
                    android:layout_width="17sp"
                    android:layout_height="17sp"
                    android:layout_alignBottom="@+id/image_phone_volunteer"
                    android:layout_alignStart="@+id/line2"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_edit"
                    android:visibility="invisible" />


                <View
                    android:id="@+id/line3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/ProfileVolunteerPhone"
                    android:layout_marginTop="30dp"
                    android:background="@color/lightGrey" />


                <View
                    android:id="@+id/line4"
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/line3"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@color/lightGrey" />

                <ImageView
                    android:id="@+id/image_city_volunteer"
                    android:layout_width="21sp"
                    android:layout_height="21sp"
                    android:layout_below="@+id/line3"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_location" />

                <EditText
                    android:id="@+id/ProfileVolunteerCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image_city_volunteer"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/transparent"
                    android:ems="6"
                    android:inputType="text"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="13sp" />


                <ImageView
                    android:id="@+id/image_age_volunteer"
                    android:layout_width="21sp"
                    android:layout_height="21sp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/line3"
                    android:layout_marginEnd="50dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_age" />

                <EditText
                    android:id="@+id/ProfileVolunteerDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/ProfileVolunteerPhone"
                    android:layout_below="@+id/image_age_volunteer"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:inputType="phone"
                    android:maxLength="6"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    tools:ignore="LabelFor,TextFields" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/ProfileVolunteerDate"
                    android:layout_alignStart="@+id/ProfileVolunteerDate"
                    android:layout_marginStart="23dp"
                    android:text="@string/years"

                    android:textColor="@android:color/black"
                    android:textSize="13sp" />

                <View
                    android:id="@+id/line5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/ProfileVolunteerDate"
                    android:layout_marginTop="30dp"
                    android:background="@color/lightGrey" />

                <ImageView
                    android:id="@+id/icon_edit_age"
                    android:layout_width="17sp"
                    android:layout_height="17sp"
                    android:layout_alignBottom="@+id/image_age_volunteer"
                    android:layout_alignStart="@+id/line4"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/icon_from_age"
                    android:src="@drawable/ic_edit"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/line5" />

            </RelativeLayout>


        </android.support.v7.widget.CardView>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/volunteer_profile_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_edit"
            app:backgroundTint="@color/colorAccent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/volunteer_profile_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="60dp"
            android:src="@drawable/ic_cancel"
            android:visibility="invisible"
            app:backgroundTint="@color/red" />

    </RelativeLayout>

</ScrollView>
